[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npmls"
version = "0.4.0"
description = "Fast cross-platform scanner for npm modules and malicious packages"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Douglas Mun", email = "douglasmun@yahoo.com"}
]
maintainers = [
    {name = "Douglas Mun", email = "douglasmun@yahoo.com"}
]
keywords = [
    "npm", "security", "scanner", "malware", "packages", "vulnerability", 
    "supply-chain", "audit", "dependency", "threat", "detection", "analysis",
    "javascript", "nodejs", "package-manager", "cybersecurity", "devops"
]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",
    
    # Intended Audience  
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    
    # Environment
    "Environment :: Console",
    "Environment :: MacOS X", 
    "Environment :: Win32 (MS Windows)",
    
    # License
    "License :: OSI Approved :: MIT License",
    
    # Operating System
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    
    # Programming Language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    
    # Topic
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration", 
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    
    # Natural Language
    "Natural Language :: English",
    
    # Typing
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0,<4.0.0",
    "aiofiles>=22.1.0,<24.0.0",
    "rich>=13.0.0,<14.0.0",
    "packaging>=23.0",  # SECURITY: Semantic version comparison (prevents false negatives)
]
dynamic = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0", 
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.0.0,<2.0.0",
    "coverage>=7.0.0,<8.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
windows = [
    "pywin32>=306;platform_system=='Windows'",
    "wmi>=1.5.1;platform_system=='Windows'",
]
security = [
    "bandit>=1.7.0",
    "safety>=2.0.0", 
    "pip-audit>=2.0.0",
]
performance = [
    "uvloop>=0.17.0;platform_system!='Windows'",
    "cchardet>=2.1.7",
]
all = [
    "npmls[dev,windows,security,performance]"
]

[project.urls]
Homepage = "https://github.com/h4x0r/npmls"
Documentation = "https://github.com/h4x0r/npmls#readme"
Repository = "https://github.com/h4x0r/npmls"
"Bug Reports" = "https://github.com/h4x0r/npmls/issues"
"Feature Requests" = "https://github.com/h4x0r/npmls/discussions"
Changelog = "https://github.com/h4x0r/npmls/releases"
Funding = "https://github.com/sponsors/h4x0r"
"Security Policy" = "https://github.com/h4x0r/npmls/security/policy"

[project.scripts]
npmls = "npmls:main"

[tool.setuptools]
py-modules = ["npmls"]
# SECURITY: Explicit package data only (no MANIFEST.in wildcards)
# Setting to false avoids conflict with explicit package_data below
include-package-data = false
zip-safe = false

# No src directory - module is in root
# [tool.setuptools.packages.find]
# where = ["src"]

[tool.setuptools.package-data]
# SECURITY: No runtime data files needed (threat DB downloaded to cache)
# Keeping this section empty but explicit to document the decision
# If py.typed is added later for type checking, add it here explicitly

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories to exclude
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | venv
  | \.svn
  | \.ipynb_checkpoints
  | _build
  | buck-out
  | build
  | dist
  | __pypackages__
)/
'''
preview = true

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration  
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--ra",
    "--strict-markers",
    "--strict-config", 
    "--verbose",
    "--tb=short",
    "--asyncio-mode=auto",
    "--cov=npmls",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "network: marks tests that require network access",
    "windows: marks tests specific to Windows platform",
    "linux: marks tests specific to Linux platform", 
    "macos: marks tests specific to macOS platform",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
timeout = 300

# Coverage configuration
[tool.coverage.run]
source = ["npmls"]
omit = [
    "tests/*",
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
    "venv/*",
    ".venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Flake8 configuration (in setup.cfg format for compatibility)
# Note: flake8 doesn't support pyproject.toml yet
[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
    "W504",  # line break after binary operator
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101,D",  # Allow assert and missing docstrings in tests
]
max-complexity = 12
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist", 
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
    ".tox",
    ".mypy_cache",
]

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101"]  # Skip assert_used test

# isort configuration (for import sorting)
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["npmls"]
known_third_party = ["aiohttp", "aiofiles", "rich", "pytest"]

# pip-audit configuration 
[tool.pip-audit]
desc = "Audit Python packages for known vulnerabilities"
require-hashes = false
output = "json"

# Build configuration
[tool.build]
# Custom build configuration if needed